# flora

./: .buckconfig  .buckconfig.local.example  .dockerignore  .dprint.json  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  BUCK2  CONTRIBUTORS.md  Cargo.toml  DEPLOYMENTS_REDESIGN_PLAN.txt  README.md  config.template.toml  config.toml.template  dev.sh  docker-compose.dev.yml  docker-compose.yaml  flake.nix  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tombi.toml  tsconfig.json  vite.config.ts  x
.agents/skills/rust-style/: SKILL.md
.agents/skills/rustdoc/: SKILL.md
.agents/skills/tmux/: skill.md
.cargo/: clippy.toml  config.toml  rustfmt.toml
.github/workflows/: npm-publish-cli-canary.yml  npm-publish-sdk-canary.yml  npm-publish.yml  publish-build-service.yml  publish-runtime.yml  www-deploy.yml
apps/build-service/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  vite.config.ts
apps/build-service/src/: auth.ts  env.ts  index.ts
apps/cli/: BUCK2  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/cli/src/: api_types.rs  auth.rs  cli.rs  config.rs  files.rs  index.ts  main.rs
apps/cli/src/commands/: deployments.rs  deployments.ts  kv.rs  kv.ts  login.ts  logs.rs  logs.ts  mod.rs
apps/cli/src/lib/: config.ts  deploy_bundle.ts  files.ts  http.ts  logger.ts  logs.ts  prompts.ts  types.ts  zip.ts
apps/cli/test/: collect_files_ignore.test.ts  deploy_bundle.test.ts  deployments.test.ts  files.test.ts  http.test.ts
apps/docs/: index.md  package.json
apps/docs/.vitepress/: config.mts
apps/frontend/: .oxlintrc.json  .oxlintrc.json.bak  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend-new/: components.json  package.json  vite.config.ts
apps/frontend-new/src/: App.tsx  index.tsx  style.css
apps/frontend/public/: robots.txt  sitemap.xml  sw.js
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/runtime/: BUCK2  Cargo.toml  Dockerfile  README.md
apps/runtime/migrations/: 0001_create_deployments.sql  0002_create_user_tokens.sql  0003_drop_language_from_deployments.sql  0004_recreate_deployments.sql  0005_create_kv_stores.sql  0006_create_guild_secrets.sql  0007_add_scope_keys_to_deployments.sql  0007_create_guild_bot_bindings.sql  0007_prebundled_deployments.sql  0008_deployment_files.sql  0009_create_deployment_revisions.sql
apps/runtime/src/: auth.rs  bot_gateway.rs  bot_router.rs  build_service.rs  bundler.rs  deployments.rs  discord_enums.rs  discord_handler.rs  guild_bots.rs  kv.rs  lib.rs  log_sink.rs  main.rs  metrics.rs  runtime.rs  secrets.rs  state.rs  tokens.rs  transpile.rs
apps/runtime/src/handlers/: auth.rs  builds.rs  error.rs  guild_bots.rs  guilds.rs  health.rs  logs.rs  metrics.rs  mod.rs  response.rs  tokens.rs
apps/runtime/src/handlers/deployments/: history.rs  list.rs  mod.rs  read.rs  revision.rs  rollback.rs  upsert.rs
apps/runtime/src/handlers/kv/: create_store.rs  delete_key.rs  delete_store.rs  export.rs  get.rs  list_keys.rs  list_stores.rs  mod.rs  set.rs
apps/runtime/src/handlers/secrets/: delete_secret.rs  list.rs  mod.rs  upsert.rs
apps/runtime/src/handlers/users/: deployment.rs  mod.rs
apps/runtime/src/ops/: authz.rs  channels.rs  commands.rs  components.rs  cron.rs  errors.rs  guilds.rs  interaction.rs  kv.rs  message.rs  mod.rs  secrets.rs  tls.rs  webhooks.rs
apps/runtime/src/runtime/: constants.rs  js.rs  limits.rs  mod.rs  secrets.rs  tests.rs  types.rs  worker.rs
apps/runtime/src/services/: discord_rest.rs  mod.rs  scope_cache.rs
apps/runtime/src/services/auth/: mod.rs  service.rs  types.rs
apps/runtime/src/services/deployments/: mod.rs
apps/runtime/src/services/kv/: cache.rs  mod.rs  models.rs  service.rs  utils.rs  validation.rs
apps/runtime/src/services/secrets/: mod.rs
apps/runtime/src/services/tokens/: mod.rs  models.rs  service.rs
apps/uwu.network/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/uwu.network/src/: main.ts  tag.ts
apps/www/: cli.md  examples.md  index.md  limitations.md  package.json  pnpm-lock.yaml  runtime.md  sdk.md  unocss.config.ts  wrangler.jsonc
cli/: Cargo.toml
cli/src/: main.rs
crates/flora_config/: BUCK2  Cargo.toml  README.md
crates/flora_macros/: BUCK2  Cargo.toml
crates/flora_macros/src/: expose_input.rs  expose_payload.rs
crates/flora_typegen/: BUCK2  Cargo.toml
crates/v8_shim/: Cargo.toml
crates/v8_shim/src/: lib.rs
docs/: api.md  buck2.md
example/: package.json  tsconfig.json
example/src/: main.ts
examples/basic/: package.json  pnpm-lock.yaml  tsconfig.json
examples/discordjs/: README.md  flora.config.ts  package.json  tsconfig.json
flora_config/: Cargo.toml  README.md
flora_config/src/: lib.rs
flora_macros/: Cargo.toml
flora_macros/src/: expose_input.rs  expose_payload.rs  lib.rs
frontend/: vite.config.ts
frontend/src/: main.tsx
private/: buck2.md
runtime-dist/: default_guild_bundle.js  default_guild_bundle.js.map  runtime_bootstrap.js  runtime_module_resolution.js  runtime_prelude.js  runtime_sdk_bundle.js
scripts/: generate-docs.ts  generate-sdk-barrels.ts  generate-types.sh  runtime_prelude.js  runtime_sdk_bundle.js
sdk/: README.md  build.ts  global-types.d.ts  package.json  pnpm-lock.yaml  rolldown.config.ts  tsconfig.flora.json  tsconfig.json  tsconfig.types.json
sdk/scripts/: generate-globals.ts
sdk/src/: embed.test.ts  generated.d.ts  generated.ts  global-types.d.ts  index.register.test.ts  index.test.ts  index.ts  kv.ts
src/: auth.rs  bundler.rs  deployments.rs  discord_handler.rs  kv.rs  log_sink.rs  main.rs  metrics.rs  runtime.rs  state.rs  tokens.rs  transpile.rs  v8_init.rs
src/handlers/: auth.rs  error.rs  guilds.rs  health.rs  logs.rs  metrics.rs  mod.rs  response.rs  tokens.rs
src/layers/: logger.rs  mod.rs
src/ops/: interaction.rs  kv.rs  message.rs  mod.rs
tools/buck/: BUCK2  buckify_rust_deps.sh  cargo_action.py  sync_rust_deps.sh
uwu.network/: main.ts  package.json  tsconfig.json
uwu.network/src/: main.ts
(+188 files in other folders)
