[workspace]
resolver = "2"
members = ["apps/cli", "apps/runtime", "crates/*"]

[workspace.dependencies]
clap = "4.5.20"
color-eyre = "0.6.5"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.12.25", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = "1"

[patch.crates-io]
# Use our deno_core fork compatible with rusty_v8 locker API
deno_core = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat" }
deno_ops = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat" }
serde_v8 = { git = "https://github.com/taskylizard/deno_core.git", branch = "flora-locker-compat" }
# Use our local rusty_v8 fork with Locker/Unlocker support
v8 = { path = "submodules/rusty_v8" }
