[workspace]
resolver = "2"
members = ["apps/cli", "apps/runtime", "crates/*"]
[workspace.package]
authors = ["flora contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/uwu/flora"

[workspace.dependencies]
axum = "0.8.7"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", features = ["std", "rand_core"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5.20"
color-eyre = { version = "0.6.5", features = ["capture-spantrace", "issue-url"] }
confique = { version = "0.4.0", features = ["toml"] }
cookie = "0.18"
croner = "3.0"
deno_core = { git = "file:///home/tasky/flora/submodules/deno_core", branch = "flora-locker-compat", default-features = false, features = ["v8_use_custom_libcxx"] }
deno_error = "0.7.1"
deno_fetch = "0.249.0"
deno_net = "0.217.0"
deno_permissions = "0.84.0"
deno_telemetry = "0.47.0"
deno_tls = "0.212.0"
deno_web = "0.256.0"
deno_webidl = "0.225.0"
dotenvy = "0.15"
eyre = "0.6.12"
futures = "0.3"
futures-util = "0.3.31"
hex = "0.4"
hmac = "0.12"
num_cpus = "1.16"
openssl = { version = "0.10.75", features = ["vendored"] }
oxc = { version = "0.101.0", features = ["full", "oxc_regular_expression", "semantic", "transformer"] }
oxc_sourcemap = "6"
parking_lot = "0.12"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# NOTE: ModalInteraction is missing `authorizing_integration_owners` and `context` fields upstream.
# These are needed for full user-installable app support. Track serenity-rs/serenity for updates.
serenity = { git = "https://github.com/serenity-rs/serenity", default-features = false, rev = "86a1fd08f31bb712582f3725ec210270726400a8", features = ["typesize", "temp_cache", "tokio_task_builder", "transport_compression_zstd", "rustls_backend"] }
sha2 = "0.10"
sled = "0.34"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
sys_traits = { version = "0.1.17", features = ["libc", "real"] }
t0x = { version = "0.1.5", features = ["serde-json-impl"] }
t0x-macros = "0.1.5"
thiserror = "2.0.17"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["compression-gzip", "fs", "timeout", "trace"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter", "serde", "time"] }
ts-rs = { version = "11", features = ["serde-compat", "serde-json-impl"] }
url = "2"
urlencoding = "2.1"
utoipa = { version = "5.4.0", features = ["auto_into_responses", "axum_extras", "chrono", "config", "debug", "url", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4"] }

[patch.crates-io]
# Use git fork of deno_core aligned with rusty_v8 locker support.
deno_core = { git = "file:///home/tasky/flora/submodules/deno_core", branch = "flora-locker-compat" }
deno_ops = { git = "file:///home/tasky/flora/submodules/deno_core", branch = "flora-locker-compat" }
serde_v8 = { git = "file:///home/tasky/flora/submodules/deno_core", branch = "flora-locker-compat" }
# Use our local rusty_v8 fork with Locker/Unlocker support
v8 = { path = "submodules/rusty_v8" }
