[workspace]
resolver = "2"
members = ["apps/runtime", "crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/uwu/flora"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", features = ["std", "rand_core"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = "4.5.20"
color-eyre = { version = "0.6.5", features = ["capture-spantrace", "issue-url"] }
confique = { version = "0.4.0", features = ["toml"] }
cookie = "0.18"
croner = "3.0"
dashmap = "6.1.0"
deno_core = { git = "https://github.com/taskylizard/deno_core.git", rev = "7999afe24081ac4cfd74205a36e98b742555408d", default-features = false, features = [
  "v8_use_custom_libcxx"
] }
deno_error = "0.7.1"
deno_fetch = "0.249.0"
deno_net = "0.217.0"
deno_permissions = "0.84.0"
deno_telemetry = "0.47.0"
deno_tls = "0.212.0"
deno_web = "0.256.0"
deno_webidl = "0.225.0"
dotenvy = "0.15"
eyre = "0.6.12"
fred = "10.1.0"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4"
hmac = "0.12"
http = "1"
num_cpus = "1.16"
openssl = { version = "0.10.75", features = ["vendored"] }
oxc = { version = "0.101.0", features = [
  "full",
  "oxc_regular_expression",
  "semantic",
  "transformer"
] }
oxc_sourcemap = "6.0.2"
parking_lot = "0.12"
proc-macro2 = "1.0.106"
quote = "1.0.44"
rand = "0.8"
reqwest = { version = "0.12.25", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serenity = { git = "https://github.com/serenity-rs/serenity", default-features = false, branch = "next", features = [
  "typesize",
  "temp_cache",
  "tokio_task_builder",
  "transport_compression_zstd",
  "rustls_backend"
] }
sha2 = "0.10"
rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio-rustls",
  "uuid"
] }
syn = { version = "2.0.117", features = ["full", "extra-traits", "parsing"] }
sys_traits = { version = "0.1.17", features = ["libc", "real"] }
t0x = { version = "0.2.0", features = ["serde-json-impl"] }
t0x-macros = "0.2.0"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["compression-gzip", "fs", "timeout", "trace"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter", "serde", "time"] }
url = "2.5.8"
urlencoding = "2.1"
utoipa = { version = "5.4.0", features = [
  "auto_into_responses",
  "axum_extras",
  "chrono",
  "config",
  "debug",
  "url",
  "uuid"
] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
static-serve = { version = "0.6", features = [] }
uuid = { version = "1.21.0", features = ["v4"] }

[patch.crates-io]
# Use Deno fork aligned with rusty_v8 locker support.
deno_core = { git = "https://github.com/taskylizard/deno_core.git", rev = "7999afe24081ac4cfd74205a36e98b742555408d" }
deno_ops = { git = "https://github.com/taskylizard/deno_core.git", rev = "7999afe24081ac4cfd74205a36e98b742555408d" }
serde_v8 = { git = "https://github.com/taskylizard/deno_core.git", rev = "7999afe24081ac4cfd74205a36e98b742555408d" }
# Shim `v8` to published `flora_v8` crate.
v8 = { path = "crates/v8_shim" }
