[package]
name = "flora-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { workspace = true, features = ["derive", "env"] }
color-eyre = { workspace = true }
confy = "0.6"
ctrlc = "3.4"
futures-util = "0.3"
ignore = "0.4"
openssl = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
